Fixed z-index issue.

--- a/website/style.css
+++ b/website/style.css
@@ -331,6 +331,7 @@ label {
   padding: 10px 10px;
   position: fixed;
   width: 100%;
+  z-index: 3;
 }
 
 .footer-content {
